# Universal-project

./: CHANGELOG.md  Dockerfile  README.md  compose.yaml  create_database_psql.sh  pyproject.toml
app/: main.py
app/api/dependencies/: __init__.py  auth.py  db.py  hashing.py  roles.py
app/api/models/: __init__.py  companies.py  users.py
app/api/services/: __init__.py  hashing.py  jwt.py
app/api/v1/routers/: __init__.py  auth.py  companies.py  groups.py  roles.py  settings.py  users.py
app/configs/: __init__.py  log_settings.py  pyproject.py  settings.py
app/core/database/: models.py  schema.sql
app/core/permissions/: acl.py
tests/integrations/: test_db.py
tests/integrations/api/: test_companies.py  test_users.py
