[project]
name = "universal-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.35.0",
]

[tool.ruff]
format.quote-style="double"
indent-width = 4
line-length = 88


[tool.ruff.lint]
ignore-init-module-imports = true
extend-select = ["Q", "I"]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "C",   # flake8-comprehensions
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # Ruff-specific rules
]

ignore = [
    "C901",  # Too complex
    "B904",  # Except clause
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"

[tool.ruff.lint.isort]
split-on-trailing-comma=true
combine-as-imports=true
known-third-party = ["bound"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "PLC0414"]
"examples/**" = ["N805", "N999", "RUF012"]
"tests/**" = ["RUF012", "SIM115"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]


