[project]
name = "universal-project"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi>=0.116.1",
    "passlib>=1.7.4",
    "psycopg>=3.2.10",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.25",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "faker>=37.8.0",
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytz>=2025.2",
    "sqlacodegen>=3.0.0",
]

[tool.ruff]
format.quote-style="double"
indent-width = 4
line-length = 88


[tool.ruff.lint]
ignore-init-module-imports = true
extend-select = ["Q", "I"]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "C",   # flake8-comprehensions
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # Ruff-specific rules
]

ignore = [
    "C901",  # Too complex
    "B904",  # Except clause
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"

[tool.ruff.lint.isort]
split-on-trailing-comma=true
combine-as-imports=true
known-third-party = ["bound"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "PLC0414"]
"examples/**" = ["N805", "N999", "RUF012"]
"tests/**" = ["RUF012", "SIM115"]


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
